[project]
name = "dashai_test_classification_metrics"
version = "0.0.1"

dependencies = []

authors = [
  { name="DashAI team" },
  { email="dashaisoftware@gmail.com" },
]

keywords = [
    "DashAI",
    "Model",
    "Task",
]

description = "Classification Metrics Package for DashAI"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points.'dashai.plugins']
accuracy = 'dashai_test_classification_metrics.accuracy:Accuracy'
f1 = 'dashai_test_classification_metrics.f1:F1'
precision = 'dashai_test_classification_metrics.precision:Precision'
recall = 'dashai_test_classification_metrics.recall:Recall'
classification_metric = 'dashai_test_classification_metrics.classification_metric:ClassificationMetric'

[project.urls]
Homepage = "https://github.com/DashAISoftware/DashAI"
Issues = "https://github.com/DashAISoftware/DashAI/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"